# embarcados2021

./: .gitmodules  README.md
aula01/: print.sh
aula02/: teste.txt
aula03/: threads.c  threads_exemplo.c
aula03/threads/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  threads  threads.c
aula03/threads_exemplo/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  threads_exemplo  threads_exemplo.c
aula04/: teste.txt
aula05/: README.md
aula06/: README.md  Tarefa-pin-GPIO.ods
aula07/: README.md
aula07/semaforo/: README.md
aula07/semaphoro/: README.md
aula07/semaphoro/produtor-consumidor/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  semaphore_example  semaphore_example.c
aula08/: README.md
aula09/: README.md
aula10/: README.md
aula11/: README.md
aula12/: README.md
projeto/: README.md  README.txt
projeto/ihm/gridWithBuilder/: builder.ui  gridWithBuilder  gridWithBuilder.c
projeto/ihm/helloWorld/: gtkhelloworld  gtkhelloworld.c
projeto/ihm/teste/: GTKteste  gtkteste.c
projeto/ihm/tutoriais/exemplo01/: exemplo01.c
projeto/prjMotorEncoder/: Tarefa-pin-GPIO.ods  codigoPrintScanFileTypeStuct.c  config.sh  crtNd1.sh  crtNd2.sh  encoder.c  mainline.persist  motor.c  sendReceiveToradexPorts.c  threads
projeto/prjMotorEncoder/modelosTutoriais/funcoesEmC/: teste
projeto/prjMotorEncoder/modelosTutoriais/threadsFuncao/: threads.c
projeto/prjMotorEncoder/modelosTutoriais/toradexGPIO/: sendReceiveToradexPorts  sendReceiveToradexPorts.c
